--- a/src/App.css
+++ b/src/App.css
@@ -1,38 +1,106 @@
-.App {
-  text-align: center;
+.form-holder {
+  display: flex;
+  justify-content: center;
+  align-content: center;
+  align-items: center;
+  height: 100vh;
 }
 
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
-}
-
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
-}
-
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
+.component-holder {
   display: flex;
   flex-direction: column;
-  align-items: center;
   justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
+  align-content: center;
+  align-items: center;
 }
 
-.App-link {
-  color: #61dafb;
+.welcome-message {
+  padding: 20px;
 }
 
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+.navbar-nav {
+  padding-left: 20px !important;
+}
+
+.logo {
+  color: #4d4d4d;
+}
+
+.banner-image {
+  width: 80%;
+}
+
+.logout {
+  cursor: pointer;
+}
+
+/* Styling for Google SSO button */
+.g-btn {
+  width: 100% !important;
+  height: 40px !important;
+  line-height: 40px !important;
+  font-size: 15px !important;
+}
+.g-btn > div,
+.g-btn > div > svg {
+  width: 40px !important;
+  height: 38px !important;
+}
+
+/* Bitcoin component */
+.bitcoin-price {
+  width: 100%;
+  background: #1a294d;
+  color: #fff;
+  border-radius: 20px;
+  border: 5px solid #f9941b;
+  margin: 50px;
+}
+
+.fa-bitcoin {
+  color: #f9941b;
+}
+
+.bitcoin-icon {
+  background: #fff;
+  border-radius: 50%;
+}
+
+.top-row {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  gap: 20px;
+  padding: 20px;
+}
+
+.bottom-row {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  padding: 10px;
+}
+
+/* Chart component */
+.chart-holder {
+  width: 100%;
+}
+
+/* Landing page */
+.landing-banner {
+  padding: 20px;
+}
+
+.landing-page {
+  height: 95vh;
+}
+
+.banner-holder {
+  background: #fff;
+  border-radius: 20px;
+  margin-top: 20px;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
 }
