--- a/src/App.css
+++ b/src/App.css
@@ -114,3 +114,19 @@
 .ant-collapse > .ant-collapse-item > .ant-collapse-header {
   font-size: 28px;
 }
+
+/* Course Page */
+.ant-steps-item-finish .ant-steps-item-icon {
+  background-color: #fff;
+  border-color: green;
+}
+
+.ant-steps-item-finish .ant-steps-item-icon > .ant-steps-icon {
+  color: green;
+}
+
+.ant-steps-item-finish
+  > .ant-steps-item-container
+  > .ant-steps-item-tail::after {
+  background-color: green;
+}
