--- a/src/App.css
+++ b/src/App.css
@@ -38,6 +38,11 @@ h6 {
   padding-left: 20px !important;
 }
 
+.navbar-style {
+  background-color: rgba(24, 178, 244, 0.1) !important;
+  color: #18b2f4;
+}
+
 .logo {
   color: #4d4d4d;
 }
@@ -188,4 +193,51 @@ h6 {
   border-radius: 10px;
   font-size: 20px;
   width: 300px;
+}
+
+/* Landing page */
+.landing-page {
+  height: 95vh;
+  background: #18b2f4;
+}
+
+.landing-banner {
+  display: flex;
+  flex-direction: row;
+  height: 60%;
+}
+
+.banner-left,
+.banner-right {
+  width: 50%;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+}
+
+.banner-msg p {
+  margin: 0;
+  font-family: "IBM Plex Mono", monospace;
+  font-size: 64px;
+  color: #fff;
+}
+
+.get-started-btn {
+  margin-top: 40px;
+}
+
+.navbar {
+  padding-bottom: 0;
+  padding-top: 0;
+}
+
+.nav-link {
+  padding: 0;
+}
+
+.navbar-nav .nav-link {
+  font-size: 16px !important;
+  color: #18b2f4 !important;
+  font-weight: 600;
 }
