Update image upload

--- a/src/App.css
+++ b/src/App.css
@@ -87,6 +87,7 @@ h6 {
 
 .page-title {
   font-size: 26px;
+  font-weight: bold;
 }
 
 /* Course card and page */
@@ -266,4 +267,21 @@ h6 {
   display: flex;
   flex-direction: row;
   justify-content: space-between;
+}
+
+/* Create page styles */
+.ant-collapse-header,
+.ant-form-item-label {
+  font-family: "IBM Plex Mono", monospace;
+}
+
+.ant-input,
+.ant-input-number {
+  border-radius: 10px;
+}
+
+/* Modal */
+.modal-image {
+  height: 200px;
+  width: 200px;
 }
